## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = structured_register_mu_recursive_function

structured_register_mu_recursive_function_SOURCES = \
	main.c

structured_register_mu_recursive_function_LDFLAGS = 

structured_register_mu_recursive_function_LDADD = 

